@@ -38,8 +38,11 @@ firefox-4.0 (4.0~b13~hg20110302r63246+nobinonly-0ubuntu1) UNRELEASED; urgency=lo
     - update debian/firefox.lintian-overrides.in
     - update debian/firefox.sh.in
     - update debian/mozconfig.in
+  * Don't remove the hardlink in the nspr headers for builds done with
+    system nspr. Likewise, don't try to create checksums for system nss builds
+    - update debian/rules
 
- -- Chris Coulson <chris.coulson@canonical.com>  Wed, 02 Mar 2011 17:33:45 +0000
+ -- Chris Coulson <chris.coulson@canonical.com>  Wed, 02 Mar 2011 18:46:59 +0000
 
 firefox-4.0 (4.0~b12+build1+nobinonly-0ubuntu1) natty; urgency=low
 
